--- a/app/src/main/resources/templates/solicitacao/editaPaciente.html
+++ b/app/src/main/resources/templates/solicitacao/editaPaciente.html
@@ -11,7 +11,7 @@
         <div class="section">
             <nav class="breadcrumb" aria-label="breadcrumbs">
                 <ul>
-                    <li><a th:href="@{'/solicitacao/hospital/lista'}" class="has-text-black" href="#" aria-current="page">Lista Solicitações</a></li>
+                    <li><a th:href="@{'/solicitacao/hospital/lista'}" class="has-text-black" aria-current="page">Lista Solicitações</a></li>
                     <li><a th:href="@{'/solicitacao/' + ${solicitacao.id} + '/editar'}">Editar Solicitação</a></li>
                 </ul>
             </nav>
