--- a/app/src/main/resources/templates/quarto/listagens/listaCheckinCheckout.html
+++ b/app/src/main/resources/templates/quarto/listagens/listaCheckinCheckout.html
@@ -11,7 +11,7 @@
             <nav class="breadcrumb" aria-label="breadcrumbs">
                 <ul>
                     <li><a th:href="@{/solicitacao/casa/lista}">Lista de solicitações da casa</a></li>
-                    <li><a class="has-text-black" href="#" aria-current="page">Check-in e Check-out</a></li>
+                    <li><a class="has-text-black" aria-current="page">Check-in e Check-out</a></li>
                 </ul>
             </nav>
         </div>
