--- a/app/src/main/resources/templates/solicitacao/listagens/listaGerenciamentoHospede.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaGerenciamentoHospede.html
@@ -12,7 +12,7 @@
             <div class="section">
                 <nav class="breadcrumb" aria-label="breadcrumbs">
                     <ul>
-                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" href="#" aria-current="page">Inicio</a></li>
+                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" aria-current="page">Inicio</a></li>
                         <li><a th:href="@{'/solicitacao/listagemHospede'}">Gerenciar Hóspedes</a></li>
                     </ul>
                 </nav>
