--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
@@ -14,8 +14,8 @@
             <div class="section">
                 <nav class="breadcrumb" aria-label="breadcrumbs">
                     <ul>
-                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" href="#" aria-current="page">Inicio</a></li>
-                        <li><a th:href="@{'/solicitacao/casa/lista'}">Solicitação</a></li>
+                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" aria-current="page">Inicio</a></li>
+                        <li><a th:href="@{'/solicitacao/casa/lista'}">Lista de Solicitações</a></li>
 
                     </ul>
                 </nav>
