--- a/app/src/main/resources/templates/solicitacao/listagens/listaUsuarios.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaUsuarios.html
@@ -15,7 +15,7 @@
             <div class="section">
                 <nav class="breadcrumb" aria-label="breadcrumbs">
                     <ul>
-                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" href="#" aria-current="page">Inicio</a></li>
+                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" aria-current="page">Inicio</a></li>
                         <li><a th:href="@{'/listaUsuarios'}" class="has-text-black" href="#" aria-current="page">Lista de Usuários</a></li>
                     </ul>
                 </nav>
