<@rfelipe, @diovanemendes> arruma tamanho botoes

--- a/app/src/main/resources/templates/quarto/listagens/listaCheckinCheckout.html
+++ b/app/src/main/resources/templates/quarto/listagens/listaCheckinCheckout.html
@@ -23,14 +23,14 @@
                 <th:block th:each="solicitacao : ${solicitacoesHospedes}">
                     <div class="column is-4">
                         <div class="box">
-                            <a class="subtitle" th:href="@{'/quartos/' + ${solicitacao.id} + '/informacoes'}"
+                            <a class="subtitle" th:href="@{/quartos/{id}/informacoes(id=${solicitacao.id})}"
                                th:text="${solicitacao.nome}">
                             </a>
                             <hr>
                             <ul>
-                                <th:block th:each="quarto: ${quartos}" th:if="${quarto.id == solicitacao.quarto.id}">
-                                    <label class="tag is-success" th:text="${quarto.nomeQuarto}"/>
-                                </th:block>
+                                <li th:each="quarto: ${quartos}" th:if="${quarto.id == solicitacao.quarto.id}">
+                                    <label class="tag is-success  is-info is-large" th:text="${quarto.nomeQuarto}"/>
+                                </li>
                             </ul>
                             <div class="recuperar">
                                 <strong> Data Check-In: </strong>
@@ -43,13 +43,13 @@
 
                                 <div class="field has-addons">
                                     <div class="control">
-                                        <input placeholder="Clique para selecionar uma data" autocomplete="off"
-                                               type="text" class="data-checkout input input-fancy datepicker-retroativo is-small"
+                                        <input placeholder="Selecione uma data" autocomplete="off"
+                                               type="text" class="data-checkout input input-fancy datepicker-retroativo"
                                                th:field="*{dataCheckout}"
                                                onkeypress="return false;">
                                     </div>
                                     <div class="control">
-                                        <button type="submit" class="button is-info is-small">Check-Out</button>
+                                        <button type="submit" class="button is-info  ">Check-Out</button>
                                     </div>
                                 </div>
                             </form>
@@ -66,14 +66,14 @@
                 <th:block th:each="solicitacao : ${solicitacoesAceitas}">
                     <div class="column is-4">
                         <div class="box">
-                            <a class="subtitle" th:href="@{'/quartos/' + ${solicitacao.id} + '/informacoes'}"
+                            <a class="subtitle" th:href="@{/quartos/{id}/informacoes(id=${solicitacao.id})}"
                                th:text="${solicitacao.nome}">
                             </a>
                             <hr>
                             <ul>
-                                <th:block th:each="quarto: ${quartos}" th:if="${quarto.id == solicitacao.quarto.id}">
-                                    <label class="tag is-success" th:text="${quarto.nomeQuarto}"/>
-                                </th:block>
+                                <li th:each="quarto: ${quartos}" th:if="${quarto.id == solicitacao.quarto.id}">
+                                    <label class="tag is-success is-info is-large" th:text="${quarto.nomeQuarto}"/>
+                                </li>
                             </ul>
                             <hr>
                             <form th:action="@{'/solicitacao/' + ${solicitacao.id} + '/checkin'}"
@@ -82,13 +82,13 @@
 
                                 <div class="field has-addons">
                                     <div class="control">
-                                        <input placeholder="Clique para selecionar uma data" autocomplete="off"
-                                               type="text" class="data-checkin input input-fancy datepicker-retroativo is-small"
+                                        <input placeholder="Selecione uma data" autocomplete="off"
+                                               type="text" class="data-checkin input input-fancy datepicker-retroativo "
                                                th:field="*{dataCheckin}"
                                                onkeypress="return false;">
                                     </div>
                                     <div class="control">
-                                        <button type="submit" class="botao-checkin button is-info is-small">Check-In</button>
+                                        <button type="submit" class="botao-checkin button is-info  ">Check-In</button>
                                     </div>
                                 </div>
                             </form>
