<@julianemartins, @ingridduarte> arruma navegações, refatora validações

--- a/app/src/main/resources/templates/quarto/listagens/listaQuartos.html
+++ b/app/src/main/resources/templates/quarto/listagens/listaQuartos.html
@@ -12,9 +12,9 @@
             <div class="section">
                 <nav class="breadcrumb" aria-label="breadcrumbs">
                     <ul>
-                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" href="#" aria-current="page">Inicio</a></li>
-                        <li><a th:href="@{'/solicitacao/casa/lista'}" class="has-text-black" href="#" aria-current="page">Solicitação</a></li>
-                        <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/listaQuartos'}">Lista de solicitações da casa</a></li>
+                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" href="#" aria-current="page">Início</a></li>
+                        <li><a th:href="@{'/solicitacao/casa/lista'}" class="has-text-black" href="#" aria-current="page">Lista de Solicitações</a></li>
+                        <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/listaQuartos'}">Lista de Quartos</a></li>
                     </ul>
                 </nav>
             </div>
