--- a/app/src/main/resources/templates/quarto/quarto.html
+++ b/app/src/main/resources/templates/quarto/quarto.html
@@ -12,10 +12,10 @@
         <div class="section">
             <nav class="breadcrumb" aria-label="breadcrumbs">
                 <ul>
-                    <li><a th:href="@{'/bemvindo'}" class="has-text-black" aria-current="page">Inicio</a></li>
-                    <li><a th:href="@{'/solicitacao/casa/lista'}" class="has-text-black" href="#" aria-current="page">Solicitação</a></li>
-                    <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/listaQuartos'}" class="has-text-black" href="#" aria-current="page">Lista de solicitações da casa</a></li>
-                    <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/quarto/' + ${quarto.id}}">Dados quarto</a></li>
+                    <li><a th:href="@{'/bemvindo'}" class="has-text-black" aria-current="page">Início</a></li>
+                    <li><a th:href="@{'/solicitacao/casa/lista'}" class="has-text-black" href="#" aria-current="page">Lista de Solicitações</a></li>
+                    <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/listaQuartos'}" class="has-text-black" href="#" aria-current="page">Lista de Quartos</a></li>
+                    <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/quarto/' + ${quarto.id}}">Dados do Quarto</a></li>
                 </ul>
             </nav>
         </div>
