--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -12,8 +12,8 @@
             <div class="section">
                 <nav class="breadcrumb" aria-label="breadcrumbs">
                     <ul>
-                        <li><a th:href="@{'/solicitacao/hospital/lista'}" class="has-text-black" aria-current="page">Lista solicitações</a></li>
-                        <li><a th:href="@{'/solicitacao/cadastro'}">Solicitação de vaga</a></li>
+                        <li><a th:href="@{'/solicitacao/hospital/lista'}" class="has-text-black" aria-current="page">Lista de Solicitações</a></li>
+                        <li><a th:href="@{'/solicitacao/cadastro'}">Solicitação de Vaga</a></li>
                     </ul>
                 </nav>
             </div>
