--- a/app/src/main/resources/templates/solicitacao/dadosSolicitacao.html
+++ b/app/src/main/resources/templates/solicitacao/dadosSolicitacao.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html th:replace="~{layout :: layout(~{::title}, ~{::body})}" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<html th:replace="~{layout :: layout(~{::title}, ~{::body})}" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Hospebem - Dados Paciente</title>
 </head>
@@ -8,16 +8,16 @@
 <main>
     <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ASSISTENTE_SOCIAL.getNome())"> Você não tem autorização para acessar essa página</div>
     <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ADMINISTRADOR.getNome())">
-    <div class="container">
-        <div class="section">
-            <nav class="breadcrumb" aria-label="breadcrumbs">
-                <ul>
-                    <li><a th:href="@{'/bemvindo'}" class="has-text-black" aria-current="page">Inicio</a></li>
-                    <li><a th:href="@{'/solicitacao/casa/lista'}" class="has-text-black">Lista de Solicitações</a></li>
-                    <li><a th:href="@{'/solicitacao' + '/' + ${solicitacao.id} + '/dados'}">Dados do Usuário</a></li>
-                </ul>
-            </nav>
-        </div>
+        <div class="container">
+            <div class="section">
+                <nav class="breadcrumb" aria-label="breadcrumbs">
+                    <ul>
+                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" aria-current="page">Início</a></li>
+                        <li><a th:href="@{'/solicitacao/casa/lista'}" class="has-text-black">Lista de Solicitações</a></li>
+                        <li><a th:href="@{'/solicitacao/' + ${solicitacao.id} + '/dados'}">Dados do Usuário</a></li>
+                    </ul>
+                </nav>
+            </div>
     <div class="card-content valign center has-text-centered">
         <div class="columns ">
             <ul th:object="${solicitacao}">
@@ -190,7 +190,7 @@
                     </div>
                 </div>
 
-                <h2 class="title is-2">Dados Acompanhante</h2>
+                <h2 class="title is-2">Dados do Acompanhante</h2>
 
                 <div th:each="acomp, index : ${solicitacao.acompanhantes}">
                     <ul th:if="${acomp.nome} != ''">
@@ -214,7 +214,7 @@
                                     <label class="label">Gênero</label>
                                 </div>
                                 <div class="control">
-                                    <input class="input input-fancy" type="text" name="generoAcomp" th:value="${acomp.genero} == 'F' ? 'Feminino' : 'Masculino'" disabled>
+                                    <input class="input input-fancy" type="text" th:value="${acomp.genero}" disabled>
                                 </div>
                             </div>
                         </div>
