--- a/app/src/main/resources/templates/quarto/listagens/listaCheckinCheckout.html
+++ b/app/src/main/resources/templates/quarto/listagens/listaCheckinCheckout.html
@@ -6,15 +6,18 @@
 
 <body>
 <main>
-    <div class="container">
-        <div class="section">
-            <nav class="breadcrumb" aria-label="breadcrumbs">
-                <ul>
-                    <li><a th:href="@{/solicitacao/casa/lista}">Lista de solicitações da casa</a></li>
-                    <li><a class="has-text-black" aria-current="page">Check-in e Check-out</a></li>
-                </ul>
-            </nav>
-        </div>
+    <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ASSISTENTE_SOCIAL.getNome())"> Você não tem autorização para acessar essa página</div>
+    <div  sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ADMINISTRADOR.getNome())">
+        <div class="container">
+            <div class="section">
+                <nav class="breadcrumb" aria-label="breadcrumbs">
+                    <ul>
+                        <li><a th:href="@{/bemvindo}" class="has-text-black">Início </a></li>
+                        <li><a th:href="@{/solicitacao/casa/lista}" class="has-text-black">Lista de Solicitações</a></li>
+                        <li><a th:href="@{/listacheckincheckout}" aria-current="page">Check-in e Check-out</a></li>
+                    </ul>
+                </nav>
+            </div>
 
         <h1 class="title is-half centralizar espacamento">Lista de Hospedes</h1>
 
@@ -98,7 +101,7 @@
             </div>
         </div>
     </div>
+    </div>
 </main>
-
 </body>
 </html>
