--- a/app/src/main/resources/templates/solicitacao/editaSenhaUsuario.html
+++ b/app/src/main/resources/templates/solicitacao/editaSenhaUsuario.html
@@ -13,7 +13,7 @@
             <div class="section">
                 <nav class="breadcrumb" aria-label="breadcrumbs">
                     <ul>
-                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" href="#" aria-current="page">Inicio</a></li>
+                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" href="#" aria-current="page">Incio</a></li>
                         <li><a th:href="@{'/listaUsuarios'}" class="has-text-black" aria-current="page">Lista de Usuários</a></li>
                         <li><a th:href="@{'/' + ${usuarios.id} + '/editaUsuario'}" class="has-text-black">Dados do Usuário</a></li>
                         <li><a th:href="@{'/' + ${usuarios.id} + '/editaSenhaUsuario'}">Senha do Usuário</a></li>
@@ -21,35 +21,35 @@
                     </ul>
                 </nav>
             </div>
-        <div class="card-content valign center has-text-centered">
-            <div class="column">
-                <h3 class="title is-3 v center has-text-centered"> Editar Senha do Usuario</h3>
-            </div>
-            <div class="columns is-mobile card-content">
-                <form th:action="@{/{id}/editaSenhaUsuario(id=${usuarios.id})}" method="post" onsubmit="return validaSenhaUsuario(event)" id="senhaUsuario">
-                    <div class="column">
-                        <div class="field">
-                            <div class="control">
-                                <p class="control has-icons-left has-icons-right margin-left-10">
-                                <i class="fas fa-lock"></i>
-                                <span>Senha</span>
-                                </p>
-                                <input class="validate input input-fancy" id="passwordUser" type="password" th:field="*{usuarios.senha}">
+            <div class="card-content valign center has-text-centered">
+                <div class="column">
+                    <h3 class="title is-3 v center has-text-centered"> Editar Senha do Usuario</h3>
+                </div>
+                <div class="columns is-mobile card-content">
+                    <form th:action="@{/{id}/editaSenhaUsuario(id=${usuarios.id})}" method="post" onsubmit="return validaSenhaUsuario(event)" id="senhaUsuario">
+                        <div class="column">
+                            <div class="field">
+                                <div class="control">
+                                    <p class="control has-icons-left has-icons-right margin-left-10">
+                                        <i class="fas fa-lock"></i>
+                                        <span>Senha</span>
+                                    </p>
+                                    <input class="validate input input-fancy" id="passwordUser" type="password" th:field="*{usuarios.senha}">
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div>
-                        <a th:href="@{/listaUsuarios}">
-                            <button type="submit" class="button verde-viavida borda-arredondada">
-                                <span>Salvar</span>
-                                <span class="icon is-small"><i class="fas fa-gavel"></i></span>
-                            </button>
-                        </a>
-                    </div>
-                </form>
+                        <div>
+                            <a th:href="@{/listaUsuarios}">
+                                <button type="submit" class="button verde-viavida borda-arredondada">
+                                    <span>Salvar</span>
+                                    <span class="icon is-small"><i class="fas fa-gavel"></i></span>
+                                </button>
+                            </a>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
     </div>
 </main>
 </body>
