--- a/app/src/main/resources/templates/solicitacao/editaUsuario.html
+++ b/app/src/main/resources/templates/solicitacao/editaUsuario.html
@@ -13,7 +13,7 @@
             <div class="section">
                 <nav class="breadcrumb" aria-label="breadcrumbs">
                     <ul>
-                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" aria-current="page">Inicio</a></li>
+                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" aria-current="page">Iniício</a></li>
                         <li><a th:href="@{'/listaUsuarios'}" class="has-text-black" href="#" aria-current="page">Lista de Usuários</a></li>
                         <li><a th:href="@{'/' + ${usuarios.id} + '/editaUsuario'}">Dados do Usuário</a></li>
                     </ul>
@@ -25,8 +25,6 @@
                 </div>
                 <div class="columns is-mobile card-content">
                     <form th:action="@{/{id}/editaUsuario(id=${usuarios.id})}" method="post" onsubmit="return validaUsuario(event)">
-
-
                         <div class="column">
                             <div class="field">
                                 <div class="control">
@@ -38,11 +36,11 @@
                                 </div>
                             </div>
                         </div>
-
                         <div id="camposAssistenteHospital" th:class="${usuarios.cargo.toString() == 'ADMINISTRADOR'} ? 'display-none' : ''">
                         <div class="column">
                             <div class="field">
                                 <div class="control">
+                                    <span>*</span>
                                     <span>Nome</span>
                                     <input id="nome" class="validate input input-fancy borda-arredondada" type="text" th:field="*{usuarios.nomeAssistente}">
                                 </div>
@@ -51,6 +49,7 @@
                         <div class="column">
                             <div class="field">
                                 <div class="control">
+                                    <span>*</span>
                                     <span>Email</span>
                                     <input id="email" class="validate input input-fancy borda-arredondada" type="text" th:field="*{usuarios.email}">
                                 </div>
@@ -59,6 +58,7 @@
                         <div class="column">
                             <div class="field">
                                 <div class="control">
+                                    <span>*</span>
                                     <span>Hospital de Refêrencia</span>
                                     <input id="hospitalReferencia" class="validate input input-fancy borda-arredondada" type="text" th:field="*{usuarios.hospitalReferencia}">
                                 </div>
@@ -67,12 +67,12 @@
                         <div class="column">
                             <div class="field">
                                 <div class="control">
+                                    <span>*</span>
                                     <span>Telefone</span>
                                     <input id="telefone" class="validate input input-fancy borda-arredondada" type="text" th:field="*{usuarios.telefone}">
                                 </div>
                             </div>
                         </div>
-
                         </div>
                         <div>
                             <a th:href="@{/listaUsuarios}">
