<@matheus-malta, @mmazzarino> Add checkin e checkout no menu

--- a/app/src/main/resources/static/css/style.css
+++ b/app/src/main/resources/static/css/style.css
@@ -3,6 +3,10 @@ body {
     font-size: 17px;
 }
 
+.board-item:hover{
+    text-decoration: underline;
+}
+
 .borda-arredondada {
     border-radius: 11px;
 }
