--- a/app/src/main/resources/templates/bemvindo/bemvindo.html
+++ b/app/src/main/resources/templates/bemvindo/bemvindo.html
@@ -34,6 +34,9 @@
                                     <div class="board-item-content"><a href="/registrar">Registrar usuários</a></div>
                                 </div>
                                 <div class="board-item">
+                                    <div class="board-item-content"><a href="/listacheckincheckout">Lista Check-in/Check-out</a></div>
+                                </div>
+                                <div class="board-item">
                                     <div class="board-item-content">
                                         <a th:href="@{/solicitacao/csv}">Exportar dados da Solicitação para EXCEL</a>
                                     </div>
