--- a/app/src/main/resources/templates/solicitacao/editaUsuario.html
+++ b/app/src/main/resources/templates/solicitacao/editaUsuario.html
@@ -13,7 +13,7 @@
             <div class="section">
                 <nav class="breadcrumb" aria-label="breadcrumbs">
                     <ul>
-                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" aria-current="page">Iniício</a></li>
+                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" aria-current="page">Início</a></li>
                         <li><a th:href="@{'/listaUsuarios'}" class="has-text-black" href="#" aria-current="page">Lista de Usuários</a></li>
                         <li><a th:href="@{'/' + ${usuarios.id} + '/editaUsuario'}">Dados do Usuário</a></li>
                     </ul>
