<@cassia11, @eduarda96>Atualiza com a master

--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoHospital.html
@@ -46,8 +46,7 @@
                                         </div>
                                         <div class="control">
                                             <a th:href="@{/solicitacao/{id}/excluir(id = ${solicitacao.id})}">
-                                                <button class="button is-danger" type="submit" th:if="${solicitacao.status.toString()44444444444444p00ppp-k
-                                                ,}!='ACEITO'"
+                                                <button class="button is-danger" type="submit" th:if="${solicitacao.status.toString()}!='ACEITO'"
                                                         onclick="return confirm('Tem certeza que deseja excluir?');">
                                                     <span>Excluir</span>
                                                     <span class="icon is-small"><i class="fas fa-trash-alt"></i></span>
