--- a/app/src/main/resources/templates/registrarUsuario/usuarioSalvo.html
+++ b/app/src/main/resources/templates/registrarUsuario/usuarioSalvo.html
@@ -6,11 +6,15 @@
 <body>
 <main>
     <div class="container card-content valign center has-text-centered">
-        <div class="section">
+        <div class="box section">
             <nav class="breadcrumb" aria-label="breadcrumbs">
-                <ul> <div><span>usuario salvo com sucesso</span></div>
-                    <li><a th:href="@{'/registrar'}">Registrar</a></li>
-                </ul>
+                <div>
+                    <span>Usuário registrado com sucesso!</span>
+                </div>
+                <div>
+                    <button class="button verde-viavida borda-arredondada"><a th:href="@{'/registrar'}">Registrar</a></button>
+                    <button class="button verde-viavida borda-arredondada"><a th:href="@{'/bemvindo'}">Tela inicial</a></button>
+                </div>
             </nav>
         </div>
     </div>
